--- a/BeauitySaloonWeb/Views/Home/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Home/Index.cshtml
@@ -1,31 +1,131 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model BeauitySaloonWeb.Models.ViewModel.Home.IndexViewModel
+@{
+    this.ViewData["Title"] = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<hr class="bg-dark mx-4" style="height: 6px;" />
+
+<div class="departments">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="section_title">Beauty Services</div>
+                <div class="section_subtitle">to choose from</div>
+            </div>
+        </div>
+        <div class="row dept_row">
+            <div class="col">
+                <div class="dept_slider_container_outer">
+                    <div class="dept_slider_container">
+
+                        <!-- Slider -->
+                        <div class="owl-carousel owl-theme dept_slider">
+
+                            @foreach (var category in Model.Categories)
+                            {
+                                <div class="owl-item dept_item">
+                                    <div class="dept_image"><img src="@category.ImageUrl" alt=""></div>
+                                    <div class="dept_content">
+                                        <div class="dept_title">@category.Name</div>
+                                        <div class="dept_link"><a>@category.Description</a></div>
+                                    </div>
+                                </div>
+                            }
+
+                        </div>
+                    </div>
+                    <!-- Dept Slider Nav -->
+                    <div class="dept_slider_nav"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="button services_button ml-auto mr-auto">
+                    <a asp-area="" asp-controller="Categories" asp-action="Index"><span>see all</span><span>see all</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<hr class="bg-dark mx-4" style="height: 6px;" />
+
+<!-- FAQ & News -->
+
+<div class="stuff">
+    <div class="container">
+        <div class="row">
+
+            <!-- FAQ -->
+            <div class="col-lg-7">
+                <div class="faq">
+                    <div class="faq_title">Faq & Stuff</div>
+                    <div class="elements_accordions">
+                        <div class="accordions">
+
+                            <div class="accordion_container">
+                                <div class="accordion d-flex flex-row align-items-center active"><div>What is BeautyBooking?</div></div>
+                                <div class="accordion_panel">
+                                    <div>
+                                        <p>
+                                            BeautyBooking is an online bookings platform for beauty services.
+                                            Haircut, wax, manicure - or whichever treatment you're after -
+                                            here you can book your appointment.
+
+                                            Our mission is to create the perfect hair and beauty experience.
+                                            We want to make booking beauty, styling and wellness appointments
+                                            simple, effortless and fast.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion_container">
+                                <div class="accordion d-flex flex-row align-items-center"><div>How to use the booking system?</div></div>
+                                <div class="accordion_panel">
+                                    <div>
+                                        <p>
+                                            You just need to Register and Login into your account.
+                                            Then you can book your appointments in 3 easy steps:
+                                            find a salon, choose a beauty service, pick date and time.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion_container">
+                                <div class="accordion d-flex flex-row align-items-center"><div>How to register a salon?</div></div>
+                                <div class="accordion_panel">
+                                    <div>
+                                        <p>
+                                            Interested in listing your salon in BeautyBooking? Good call. Stay Tuned!
+                                            <br>COMING SOON: "Register a Salon" option for all users.
+                                            <br>With BeautyBooking managing your schedule would be easy as never before.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Latest News -->
+            <div class="col-lg-5">
+                <div class="news-grey">
+                    <div class="news_title">Latest Blog Posts</div>
+                    <div class="news_container">
+                        <div>
+                            @await Component.InvokeAsync("LatestBlogPosts", 4)
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
+
+<hr class="bg-dark mx-4" style="height: 6px;" />
