--- a/BeauitySaloonWeb/Views/Shared/_Layout.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_Layout.cshtml
@@ -1,44 +1,118 @@
-﻿<!DOCTYPE html>
+﻿@using BeauitySaloonWeb.CustomsValidations
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Beauty Saloon</title>
 
+    <environment names="Development">
+        <link href="~/Content/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/animate.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/css/site.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/css/responsive.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+    <environment names="Staging,Production">
+        <link href="~/Content/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/plugins/OwlCarousel2-2.2.1/animate.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/css/site.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/Content/css/responsive.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+
+    @this.RenderSection("Styles", required: false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+    <partial name="_CookieConsentPartial" />
+
+    <div class="super_container">
+
+        <!-- Menu -->
+        <partial name="_MenuPartial" />
+
+        <!-- Home -->
+        @if (this.ViewData["Title"].ToString() == "Home Page")
+        {
+            <div class="home-home">
+                <div class="background_image" style="background-image:url(@Images.Index)"></div>
+
+                <partial name="_HeaderPartial" />
+
+                <div class="home_container-home">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="home_title-home">BEAUTY BOOKING</div>
+                                <div class="home_text">The only right way to find and book your beauty services!</div>
+                                <div class="button home_button">
+                                    <a asp-area="" asp-controller="Salons" asp-action="Index"><span>Book Now</span><span>Book Now</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+        }
+        else
+        {
+            <div class="home">
+                <div class="background_image" style="background-image:url(@Images.CoverBackground)"></div>
+
+                <partial name="_HeaderPartial" />
+
+                <div class="home_container">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="home_content">
+                                    <div class="home_title">@this.ViewData["Title"]</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        }
+
+        <div class="m-5">
+            <main role="main">
+                @this.RenderBody()
+            </main>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+        <!-- Footer -->
+        <partial name="_FooterPartial" />
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <environment names="Development">
+        <script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
+        <script src="~/js/popper.js" asp-append-version="true"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+        <script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js" asp-append-version="true"></script>
+        <script src="~/plugins/easing/easing.js" asp-append-version="true"></script>
+        <script src="~/plugins/parallax-js-master/parallax.min.js" asp-append-version="true"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    </environment>
+    <environment names="Staging,Production">
+        <script src="~/Content/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
+        <script src="~/Content/js/popper.min.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/easing/easing.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/parallax-js-master/parallax.min.js" asp-append-version="true"></script>
+        <script src="~/Content/js/site.min.js" asp-append-version="true"></script>
+    </environment>
+
+    @this.RenderSection("Scripts", required: false)
 </body>
 </html>
