--- a/BeauitySaloonWeb/Views/Categories/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Categories/Index.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-
-
 <div class="row">
     <!-- News Posts -->
     @foreach (var category in Model.Categories)
@@ -47,6 +45,6 @@
                     </div>
                 </div>
             </div>
-        </div>}
+        </div>
+        }
 </div>
-<!--https://localhost:44319/Categories ->
