--- a/BeauitySaloonWeb/Views/Shared/_Layout.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_Layout.cshtml
@@ -91,15 +91,15 @@
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
-        <script src="~/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
-        <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
-        <script src="~/js/popper.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
-        <script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js" asp-append-version="true"></script>
-        <script src="~/plugins/easing/easing.js" asp-append-version="true"></script>
-        <script src="~/plugins/parallax-js-master/parallax.min.js" asp-append-version="true"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
+        <script src="~/Content/js/popper.js" asp-append-version="true"></script>
+        <script src="~/Content/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/easing/easing.js" asp-append-version="true"></script>
+        <script src="~/Content/plugins/parallax-js-master/parallax.min.js" asp-append-version="true"></script>
+        <script src="~/Content/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="~/Content/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
