--- a/BeauitySaloonWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/BeauitySaloonWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@model BeauitySaloonWeb.Models.ExternalLoginConfirmationViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.ExternalLoginConfirmationViewModel
+
 @{
     ViewBag.Title = "Register";
 }
