--- a/BeauitySaloonWeb/Views/Account/ForgotPassword.cshtml
+++ b/BeauitySaloonWeb/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.ForgotPasswordViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
