--- a/BeauitySaloonWeb/Views/Account/Login.cshtml
+++ b/BeauitySaloonWeb/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using BeauitySaloonWeb.Models
+﻿@using BeauitySaloonWeb.Models.ViewModel.Accounts
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
