--- a/BeauitySaloonWeb/Views/Account/ResetPassword.cshtml
+++ b/BeauitySaloonWeb/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model BeauitySaloonWeb.Models.ResetPasswordViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.ResetPasswordViewModel
+
 @{
     ViewBag.Title = "Reset password";
 }
