--- a/BeauitySaloonWeb/Views/Account/VerifyCode.cshtml
+++ b/BeauitySaloonWeb/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.VerifyCodeViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
