--- a/BeauitySaloonWeb/Views/Account/Register.cshtml
+++ b/BeauitySaloonWeb/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model BeauitySaloonWeb.Models.RegisterViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.RegisterViewModel
+
 @{
     ViewBag.Title = "Register";
 }
