--- a/BeauitySaloonWeb/Views/Account/SendCode.cshtml
+++ b/BeauitySaloonWeb/Views/Account/SendCode.cshtml
@@ -1,4 +1,5 @@
-﻿@model BeauitySaloonWeb.Models.SendCodeViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.SendCodeViewModel
+
 @{
     ViewBag.Title = "Send";
 }
