--- a/BeauitySaloonWeb/Views/BlogPosts/Index.cshtml
+++ b/BeauitySaloonWeb/Views/BlogPosts/Index.cshtml
@@ -1,13 +1,18 @@
-﻿@model BeauitySaloonWeb.Models.ViewModel.BlogPosts.BlogPostsListViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.BlogPosts.BlogPostsPaginatedListViewModel
+
 @{
     this.ViewData["Title"] = "Blog";
-}<div class="row">
+}
+
+<div class="row">
     <!-- News Posts -->
     <div class="col-lg-8">
         <div class="news_posts">
             @foreach (var blogPost in Model.BlogPosts)
             {
-                <hr class="bg-dark mx-4" style="height: 6px;" /> <!-- News Post -->
+                <hr class="bg-dark mx-4" style="height: 6px;" />
+
+                <!-- News Post -->
                 <div class="news_post">
                     <div class="news_post_image"><img src="@blogPost.ImageUrl" alt=""></div>
                     <div class="news_post_content">
@@ -31,7 +36,9 @@
                 </div>
             }
         </div>
-    </div> <!-- Sidebar -->
+    </div>
+
+    <!-- Sidebar -->
     <div class="col-lg-4">
         <div class="news_sidebar">
             <!-- Latest News -->
@@ -39,32 +46,37 @@
                 <div class="sidebar_title">Latest Blog Posts</div>
                 <div class="sidebar_latest_container">
                     <div>
-                    @*  @await Component.InvokeAsync("LatestBlogPosts", 10)*@
+                        @*@await Component.InvokeAsync("LatestBlogPosts", 10)*@
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-@*@{
+
+@{
     var prevDisabled = !Model.BlogPosts.HasPreviousPage ? "disabled" : "";
     var nextDisabled = !Model.BlogPosts.HasNextPage ? "disabled" : "";
-}@if (ViewData["CurrentSort"] == null)
+}
+
+@if (ViewData["CurrentSort"] == null)
 {
     <div class="row ml-5">
         <div class="m-5">
             <a asp-action="Index"
-               asp-route-pageNumber="@(Model.BlogPosts.PageIndex - 1)"
-               style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @prevDisabled">
-                <i class="fa fa-arrow-left"></i>
-            </a>
+            href="@Url.Action("Index",new { pageNumber = Model.BlogPosts.PageIndex - 1 })"
+           asp-route-pageNumber="@(Model.BlogPosts.PageIndex - 1)"
+           style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @prevDisabled">
+            <i class="fa fa-arrow-left"></i>
+        </a>
         </div>
         <div class="m-5">
             <a asp-action="Index"
+               href="@Url.Action("Index",new { pageNumber = Model.BlogPosts.PageIndex + 1 })"
                asp-route-pageNumber="@(Model.BlogPosts.PageIndex + 1)"
                style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @nextDisabled">
                 <i class="fa fa-arrow-right"></i>
             </a>
         </div>
     </div>
-}*@
+}
