--- a/BeauitySaloonWeb/Views/Home/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col">
                 <div class="button services_button ml-auto mr-auto">
-                    <a asp-area="" asp-controller="Categories" asp-action="Index"><span>see all</span><span>see all</span></a>
+                    <a href="/Categories/Index"><span>see all</span><span>see all</span></a>
                 </div>
             </div>
         </div>
