--- a/BeauitySaloonWeb/Views/Shared/_MenuItemsPartial.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_MenuItemsPartial.cshtml
@@ -9,7 +9,7 @@
 <li class="menu_item"><a href="/Home/Index" >Home</a></li>
 <li class="menu_item"><a href="/Categories/Index" >Categories</a></li>
 <li class="menu_item"><a  href="/Salons/Index" >Salons</a></li>
-<li class="menu_item"><a  href="/BlobPosts/Index" asp-controller="BlogPosts" asp-action="Index">Blog</a></li>
+<li class="menu_item"><a  href="/BlogPosts/Index" asp-controller="BlogPosts" asp-action="Index">Blog</a></li>
 <li class="menu_item">
     <a  href="/Appointments/Index"><i class="fa fa-calendar" aria-hidden="true"></i> Appointments</a>
 </li>
