--- a/BeauitySaloonWeb/Views/Categories/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Categories/Index.cshtml
@@ -4,46 +4,52 @@
 }
 
 <div class="row">
+    @{
+        if (Model.Categories != null)
+        {
+            foreach (var category in Model.Categories)
+            {
+                <div class="col-lg-4">
+                    <hr class="bg-dark mx-4" style="height: 6px;" />
+                    <!-- News Post -->
+                    <div class="news_post">
+                        <div class="news_post_image"><img src="@category.ImageUrl" alt=""></div>
+                        <div class="news_post_content">
+                            <div class="news_post_title text-center"><a>@category.Name</a></div>
+                            <div class="news_post_text">
+                                <p>@category.Description</p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="about_text_highlight">
+                                        Запишитесь на услугу за 3 шага:
+                                    </div>
+                                    <div class="about_text_2">
+                                        <ul>
+                                            <li> Выберите салон.</li>
+                                            <li> Выберите услугу.</li>
+                                            <li> Выберите желаему дату и время.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="button button-large button_1 elements_button mt-4">
+                                        <a asp-area="" asp-controller="Salons" asp-action="Index" asp-route-sortId="@category.Id">
+                                            <span> Найти салон </span>
+                                            <span> Найти салон </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>}
+        }
+    }
     <!-- News Posts -->
-    @foreach (var category in Model.Categories)
-    {
-        <div class="col-lg-4">
-            <hr class="bg-dark mx-4" style="height: 6px;" />
-            <!-- News Post -->
-            <div class="news_post">
-                <div class="news_post_image"><img src="@category.ImageUrl" alt=""></div>
-                <div class="news_post_content">
-                    <div class="news_post_title text-center"><a>@category.Name</a></div>
-                    <div class="news_post_text">
-                        <p>@category.Description</p>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <div class="row">
-                        <div class="col">
-                            <div class="about_text_highlight">
-                                Запишитесь на услугу за 3 шага:
-                            </div>
-                            <div class="about_text_2">
-                                <ul>
-                                    <li> Выберите салон.</li>
-                                    <li> Выберите услугу.</li>
-                                    <li> Выберите желаему дату и время.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="button button-large button_1 elements_button mt-4">
-                                <a asp-area="" asp-controller="Salons" asp-action="Index" asp-route-sortId="@category.Id">
-                                    <span> Найти салон </span>
-                                    <span> Найти салон </span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>}
+
 </div>
