--- a/BeauitySaloonWeb/Views/Salons/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Salons/Index.cshtml
@@ -25,14 +25,14 @@ else
                         <div class="doctor_title">@salon.CityName, @salon.Address</div>
                         <div class="doctor_title ml-2">
                             <div class="button button_1 elements_button mt-2">
-                                <a asp-area="" asp-controller="Salons" asp-action="Details" asp-route-id="@salon.Id">
-                                    <span>услуги</span>
-                                    <span>услуги</span>
+                                <a href="@Url.Action("Details",new { id = salon.Id })" >
+                                    <span>See Services</span>
+                                    <span>See Services</span>
                                 </a>
                             </div>
                         </div>
                         <div class="doctor_link">
-                            <a asp-area="" asp-controller="Salons" asp-action="Details" asp-route-id="@salon.Id">+</a>
+                            <a href="@Url.Action("Details",new { id = salon.Id })">+</a>
                         </div>
                     </div>
                 </div>
@@ -45,24 +45,24 @@ else
     var prevDisabled = !Model.Salons.HasPreviousPage ? "disabled" : "";
     var nextDisabled = !Model.Salons.HasNextPage ? "disabled" : "";
 
-<div class="row ml-5">
-    <div class="m-5">
-        <a asp-action="Index"
-           asp-route-sortId="@ViewData["CurrentSort"]"
-           asp-route-pageNumber="@(Model.Salons.PageIndex - 1)"
-           asp-route-currentFilter="@ViewData["CurrentFilter"]"
-           style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @prevDisabled">
-            &#x2190; Previous Page
-        </a>
+    <div class="row ml-5">
+        <div class="m-5">
+            <a asp-action="Index"
+               asp-route-sortId="@ViewData["CurrentSort"]"
+               href="@Url.Action("Index",new { pageNumber = Model.Salons.PageIndex - 1 })"
+               asp-route-currentFilter="@ViewData["CurrentFilter"]"
+               style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @prevDisabled">
+                &#x2190; Previous Page
+            </a>
+        </div>
+        <div class="m-5">
+            <a asp-action="Index"
+               asp-route-sortId="@ViewData["CurrentSort"]"
+               href="@Url.Action("Index",new { pageNumber = Model.Salons.PageIndex + 1 })"
+               asp-route-currentFilter="@ViewData["CurrentFilter"]"
+               style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @nextDisabled">
+                Next Page &#x2192;
+            </a>
+        </div>
     </div>
-    <div class="m-5">
-        <a asp-action="Index"
-           asp-route-sortId="@ViewData["CurrentSort"]"
-           asp-route-pageNumber="@(Model.Salons.PageIndex + 1)"
-           asp-route-currentFilter="@ViewData["CurrentFilter"]"
-           style="color: #BA55D3" class="btn btn-outline-secondary btn-lg @nextDisabled">
-            Next Page &#x2192;
-        </a>
-    </div>
-</div>
 }
