--- a/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,32 +1,33 @@
 ﻿
-@*@using BeautyBooking.
-    @using Bea.Data.Models
-    @using Microsoft.AspNet.Identity
-    @inject SignInManager<ApplicationUser>SignInManager
-    @inject UserManager<ApplicationUser>UserManager*@
+@using BeauitySaloonWeb.
+@using BeauitySaloonWeb.Models
+@using Microsoft.AspNet.Identity
+@model SignInManager<ApplicationUser> SignInManager
+@model UserManager<ApplicationUser> UserManage
 @{
-    if (this.SignInManager.IsSignedIn(this.User))
-{
-    <li>
-        <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @(this.User.Identity.Name)!</a>
-    </li>
-    if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+    if (this.SignInManager.IsSignedIn(UserManager.User))
     {
-    <li>
-        <a asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
-    </li>
+        <li>
+            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @(this.User.Identity.Name)!</a>
+        </li>
+        if (this.User.IsInRole("Administration"))
+        {
+            <li>
+                <a href="~/Administration/Dashboard/Index" title="Admin">Admin</a>
+            </li>
+        }
+<li>
+    @using (Html.Be
+    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
+        <button class="btn btn-dark" type="submit">Logout</button>
+    </form>
+</li>
     }
-    <li>
-        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
-            <button class="btn btn-dark" type="submit">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+    else
+    {
+        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
 
-    <li>@Html.ActionLin("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-}
+        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    }
 }
 
