Admin Layout Fixed

--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminCategories/AddCategory.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminCategories/AddCategory.cshtml
@@ -43,7 +43,7 @@
     }
 </div>
 @section Scripts {
-    <script src="~/js/upload-image.js" asp-append-version="true"></script>
+    <script src="~/Content/js/upload-image.js" asp-append-version="true"></script>
 }
 
 
