--- a/BeauitySaloonWeb/Areas/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Saloon</title>
-    <link href="~/Content/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    @*<link href="~/Content/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/plugins/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
 
     <link href="~/Context/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
@@ -15,7 +15,25 @@
     <link href="~/Context/plugins/OwlCarousel2-2.2.1/animate.css" rel="stylesheet" />
     <link href="~/Context/css/site.css" rel="stylesheet" />
     <link href="~/Context/css/responsive.css" rel="stylesheet" />
-    <link href="~/Context/css/sidebar.css" rel="stylesheet" />
+    <link href="~/Context/css/sidebar.css" rel="stylesheet" />*@
+
+    <link href="~/Content/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/animate.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/site.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/responsive.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/sidebar.css" rel="stylesheet" asp-append-version="true" />
+
+    <link href="~/Content/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.carousel.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/plugins/OwlCarousel2-2.2.1/animate.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/site.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/responsive.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/Content/css/sidebar.css" rel="stylesheet" asp-append-version="true" />
 
     @this.RenderSection("Styles", required: false)
 </head>
