--- a/BeauitySaloonWeb/Views/Manage/AddPhoneNumber.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.AddPhoneNumberViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
