--- a/BeauitySaloonWeb/Views/Manage/ChangePassword.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.ChangePasswordViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
