--- a/BeauitySaloonWeb/Views/Manage/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.IndexViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
