--- a/BeauitySaloonWeb/Views/Manage/ManageLogins.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.ManageLoginsViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
