--- a/BeauitySaloonWeb/Views/Manage/SetPassword.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.SetPasswordViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
