--- a/BeauitySaloonWeb/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/BeauitySaloonWeb/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.VerifyPhoneNumberViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Accounts.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
