--- a/BeauitySaloonWeb/Views/Shared/_HeaderPartial.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_HeaderPartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-<header class="header" id="header">
+﻿<header class="header" id="header">
     <div>
         <div class="header_top">
             <div class="container">
@@ -12,7 +11,7 @@
                             <div class="header_top_extra d-flex flex-row align-items-center justify-content-start ml-auto">
                                 <div class="header_top_nav">
                                     <ul class="d-flex flex-row align-items-center justify-content-start">
-                                        <partial name="_LoginPartial" />
+                                        @Html.Partial("_LoginPartial")
                                     </ul>
                                 </div>
                             </div>
