--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminDashboard/Index.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminDashboard/Index.cshtml
@@ -5,42 +5,42 @@
 <h3>Welcome to Admin Dashboard!</h3>
 <p>Here is a quick navigation:</p>
 <div>
-    <a href="~/Administration/BlogPosts/Index"
+    <a href="~/Administration/AdminBlogPosts/Index"
        class="list-group-item list-group-item-action bg-light">Blog Posts</a>
 
     <div class="ml-5 my-2">
-        <a class="btn btn-outline-info btn-sm" asp-area="Administration" asp-controller="BlogPosts" asp-action="AddBlogPost">Add New Blog Post</a>
+        <a class="btn btn-outline-info btn-sm" href="/Administration/AdminBlogPosts/AddBlogPost">Add New Blog Post</a>
     </div>
 
-    <a asp-area="Administration" asp-controller="Categories" asp-action="Index"
+    <a href="/Administration/AdminCategories/Index"
        class="list-group-item list-group-item-action bg-light">Categories</a>
 
     <dvi class="ml-5 my-2">
-        <a class="btn btn-outline-info btn-sm" asp-area="Administration" asp-controller="Categories" asp-action="AddCategory">Add New Category</a>
+        <a class="btn btn-outline-info btn-sm" href="/Administration/AdminCategories/AddCategory">Add New Category</a>
     </dvi>
 
-    <a asp-area="Administration" asp-controller="Services" asp-action="Index"
+    <a href="/Administration/AdminServices/Index"
        class="list-group-item list-group-item-action bg-light">Services</a>
 
     <div class="ml-5 my-2">
-        <a class="btn btn-outline-info btn-sm" asp-area="Administration" asp-controller="Services" asp-action="AddService">Add New Service</a>
+        <a class="btn btn-outline-info btn-sm" href="/Administration/AdminServices/AddService">Add New Service</a>
     </div>
 
-    <a asp-area="Administration" asp-controller="Cities" asp-action="Index"
+    <a href="/Administration/AdminCities/Index"
        class="list-group-item list-group-item-action bg-light">Cities</a>
 
     <div class="ml-5 my-2">
-        <a class="btn btn-outline-info btn-sm" asp-area="Administration" asp-controller="Cities" asp-action="AddCity">Add New City</a>
+        <a class="btn btn-outline-info btn-sm" href="/Administration/AdminCities/AddCity">Add New City</a>
     </div>
 
-    <a asp-area="Administration" asp-controller="Salons" asp-action="Index"
+    <a href="/Administration/AdminSalons/Index"
        class="list-group-item list-group-item-action bg-light">Salons</a>
 
     <div class="ml-5 my-2">
-        <a class="btn btn-outline-info btn-sm" asp-area="Administration" asp-controller="Salons" asp-action="AddSalon">Add New Salon</a>
+        <a class="btn btn-outline-info btn-sm" href="/Administration/AdminSalons/AddSalon">Add New Salon</a>
     </div>
 
-    <a asp-area="Administration" asp-controller="Appointments" asp-action="Index"
+    <a href="/Administration/AdminAppointments/Index"
        class="list-group-item list-group-item-action bg-light">Appointments</a>
 </div>
 
