--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/AddSalon.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/AddSalon.cshtml
@@ -61,5 +61,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/upload-image.js" asp-append-version="true"></script>
+    <script src="~/Content/js/upload-image.js" asp-append-version="true"></script>
 }
