--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminServices/AddService.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminServices/AddService.cshtml
@@ -8,7 +8,7 @@
 
 <div class="col-lg-6">
     <h2>New Service</h2>
-    @using (Html.BeginForm("Add City", "AdminServices", FormMethod.Post, new { @class = "pt-4" }))
+    @using (Html.BeginForm("AddService", "AdminServices", FormMethod.Post, new { @class = "pt-4" }))
     {
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Name</label>
