--- a/BeauitySaloonWeb/Areas/Manager/Views/ManagerDashboard/_SalonsSimpleList.cshtml
+++ b/BeauitySaloonWeb/Areas/Manager/Views/ManagerDashboard/_SalonsSimpleList.cshtml
@@ -2,9 +2,14 @@
 @{
     this.ViewData["Title"] = "Default";
 }
-
-@foreach (var salon in Model.Salons)
-{
-    <a href="/Manager/Salons/Details/@salon.Id" asp-area="Manager" asp-controller="Salons" asp-action="Details" asp-route-id="@salon.Id"
-       class="list-group-item list-group-item-action bg-light">@salon.Name</a>
+@{
+    if (Model.Salons != null)
+    {
+        foreach (var salon in Model.Salons)
+        {
+            <a href="/Manager/Salons/Details/@salon.Id" 
+               class="list-group-item list-group-item-action bg-light">@salon.Name</a>
+        }
+    }
 }
+
