--- a/BeauitySaloonWeb/Areas/Manager/Views/Shared/_ManagerSidebarPartial.cshtml
+++ b/BeauitySaloonWeb/Areas/Manager/Views/Shared/_ManagerSidebarPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Sidebar -->
 <div class="bg-light border border-secondary" id="sidebar-wrapper">
-    <div class="sidebar-heading"><strong><u>Salon Manager</u></strong></div>
+    <div class="sidebar-heading"><strong><u></u></strong></div>
     <div class="list-group list-group-flush">
 
         <div>
