--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminCategories/AddCategory.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminCategories/AddCategory.cshtml
@@ -6,7 +6,8 @@
 }
 <div class="col-lg-6">
     <h2>New Category</h2>
-    @using (Html.BeginForm("AddCategory", "AdminCategories", FormMethod.Post, new { @class = "pt-4" }))
+    <span class="text-danger">@ViewBag.message </span>
+    @using (Html.BeginForm("AddCategory", "AdminCategories", FormMethod.Post, new { @class = "pt-4", enctype = "multipart/form-data" }))
     {
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Name</label>
@@ -19,8 +20,8 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Image</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(x => x.Image, new { @type = "file", @class = "form-control-file image-upload", @required = "required" })
-                <span>@Html.ValidationMessageFor(x => x.Image, null, new { @class = "text-danger" })</span>
+                @Html.TextBoxFor(x => x.file, new { type = "file", @class = "form-control-file image-upload", name = "file" })
+                <span>@Html.ValidationMessageFor(x => x.file, null, new { @class = "text-danger" })</span>
             </div>
         </div>
         <div class="form-group row">
