--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminCities/AddCity.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminCities/AddCity.cshtml
@@ -3,11 +3,9 @@
     ViewBag.Title = "Add a new city";
 }
 
-<h2>AddCity</h2>
-
 <div class="col-lg-6">
     <h2>New City</h2>
-    @using (Html.BeginForm("AddCity", "AdminCity", FormMethod.Post, new { @class = "pt-4" }))
+    @using (Html.BeginForm("AddCity", "AdminCities", FormMethod.Post, new { @class = "pt-4" }))
     {
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Name</label>
