--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/Index.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/Index.cshtml
@@ -3,22 +3,14 @@
     this.ViewData["Title"] = "Salons";
 }
 @{
-    int count = 0;
     if (Model.Salons != null)
     {
-        count = Model.Salons.Count();
-    }
-}
-
-<h2>
-    All Salons (@count)
-    <span>
-        <a class="btn btn-info" href="/Administration/AdminSalons/AddSalon">Add New Salon</a>
-    </span>
-</h2>
-@{
-    if (Model.Salons != null)
-    {
+        <h2>
+            All Salons (@Model.Salons.Count())
+            <span>
+                <a class="btn btn-info" href="/Administration/AdminSalons/AddSalon">Add New Salon</a>
+            </span>
+        </h2>
         <table class="table table-bordered table-striped">
             <thead class="thead-light">
                 <tr>
@@ -54,18 +46,27 @@
                             }
                             else
                             {
-                                <form method="post">
-                                    <button type="submit" class="btn btn-danger btn-sm"
-                                            asp-area="Administration" asp-controller="Salons" asp-action="DeleteSalon" asp-route-id="@salon.Id">
+                                using (Html.BeginForm("DeleteCity", "AdminSalons", new { id = salon.Id }, FormMethod.Post))
+                                {
+                                    <button type="submit" class="btn btn-danger btn-sm">
                                         Delete
                                     </button>
-                                </form>
+                                }
                             }
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
+    }
+    else
+    {
+        <h2>
+            All Salons (0)
+            <span>
+                <a class="btn btn-info" href="/Administration/AdminSalons/AddSalon">Add New Salon</a>
+            </span>
+        </h2>
     }
 }
 
