--- a/BeauitySaloonWeb/Areas/Manager/Views/ManagerDashboard/Index.cshtml
+++ b/BeauitySaloonWeb/Areas/Manager/Views/ManagerDashboard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeauitySaloonWeb.Models.ViewModel.Salons.SalonsListViewModel
+﻿@model BeauitySaloonWeb.Models.ViewModel.Salons.SalonsSimpleListViewModel
 @{
     this.ViewData["Title"] = "Salon Manager Dashboard";
 }
@@ -7,5 +7,14 @@
 <p>Here are the salons you manage:</p>
 
 <div>
-    @Html.Partial("_SalonsSimpleList");
+    @{
+        if (Model.Salons != null)
+        {
+            foreach (var salon in Model.Salons)
+            {
+                <a href="/Manager/Salons/Details/@salon.Id"
+                   class="list-group-item list-group-item-action bg-light">@salon.Name</a>
+            }
+        }
+    }
 </div>
