--- a/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
@@ -2,23 +2,17 @@
     if (User.Identity.IsAuthenticated)
     {
         <li>
-            <a asp-area="Identity"  title="Manage">Hello @(this.User.Identity.Name)!</a>
+            <a asp-area="Identity" title="Manage">Hello @(this.User.Identity.Name)!</a>
         </li>
-        if (HttpContext.Current.User.IsInRole("Administration"))
-        { 
+        if (HttpContext.Current.User.IsInRole("Admin"))
+        {
             <li>
-                <a href="~/Administration/Dashboard/Index" title="Admin">Admin</a>
+                <a href="~/Administration/AdminDashboard/Index" title="Admin">Admin</a>
             </li>
         }
-        <li>
-            @using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { @class = "form-inline", role = "form" }))
-            {
-            @Html.AntiForgeryToken()
-                @*<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(Html.Action("Index", "Home", new { area = string.Empty }))">
-                    </form>*@
-                <button class="btn btn-dark" type="submit">Logout</button>
-            }
-        </li>
+<li>
+    <a href="/Account/LogOff" class = "btn btn-dark"  title="Logout">Logout</a>
+</li>
     }
     else
     {
