--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/Index.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminSalons/Index.cshtml
@@ -46,7 +46,7 @@
                             }
                             else
                             {
-                                using (Html.BeginForm("DeleteCity", "AdminSalons", new { id = salon.Id }, FormMethod.Post))
+                                using (Html.BeginForm("DeleteSalon", "AdminSalons", new { id = salon.Id }, FormMethod.Post))
                                 {
                                     <button type="submit" class="btn btn-danger btn-sm">
                                         Delete
