--- a/BeauitySaloonWeb/Areas/Administration/Views/AdminServices/AddService.cshtml
+++ b/BeauitySaloonWeb/Areas/Administration/Views/AdminServices/AddService.cshtml
@@ -4,7 +4,6 @@
     var categories = this.ViewData["Categories"] as SelectList;
 }
 
-<h2>Add Service</h2>
 
 <div class="col-lg-6">
     <h2>New Service</h2>
@@ -35,7 +34,7 @@
         <div class="form-group row">
             <div class="col-sm-6 text-right">
                 <button type="submit" class="btn btn-success">
-                    Add Category
+                    Add Services
                 </button>
             </div>
             <div class="col-sm-6">
